--- a/CSS/index.css
+++ b/CSS/index.css
@@ -215,10 +215,17 @@ div {
     color: rgb(62, 60, 60);
 
 }
-.warning-text{
+.warning-text {
+    position: fixed;
+    top: 0;
+    right: 0;
     padding: 1%;
-    color:red;
-}
+    color: white;
+    background-color: red;
+    z-index: 9999;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+    display: none; /* Hide by default */
+  }
 
 .console-log{
     border:1px solid red
